Fix Firefox & Safari - input yellow bottom border is too high up

--- a/src/components/BaseInput/index.css
+++ b/src/components/BaseInput/index.css
@@ -31,6 +31,7 @@
 }
 
 .base-input textarea {
+  margin-top: -4px;
   padding: 0;
 }
 
@@ -47,16 +48,18 @@
 
 .base-input input,
 .base-input textarea {
+  --padding-bottom: 0.375rem;
+  --border-bottom-width: 2px;
   width: 100%;
-  height: 100%;
+  height: calc(100% - var(--padding-bottom) - var(--border-bottom-width));
   padding: 0;
-  padding-bottom: 0.35rem;
+  padding-bottom: var(--padding-bottom);
 
   color: currentColor;
   background-color: transparent;
 
   border: none;
-  border-bottom: solid 2px currentColor;
+  border-bottom: solid var(--border-bottom-width) currentColor;
 
   resize: none;
 }
